--- a/majusurat_be/cloudbuild.yaml
+++ b/majusurat_be/cloudbuild.yaml
@@ -2,10 +2,12 @@ steps:
   # 1. Salin file .env dari Cloud Storage ke direktori kerja Cloud Build Pakai Gsuri
   - name: "gcr.io/cloud-builders/gsutil"
     args: ["cp", "gs://majusurat-env/.env", ".env"]
+    dir: "majusurat_be"
 
   # 2. Build Docker image backend dengan tag yang sesuai project dan service
   - name: "gcr.io/cloud-builders/docker"
     args: ["build", "-t", "gcr.io/$PROJECT_ID/majusurat-be", "."]
+    dir: "majusurat_be"
 
   # 3. Push Docker image ke Container Registry / Artifact Registry
   - name: "gcr.io/cloud-builders/docker"
